# Veil-Miner

./: README.md
veil-progpow-miner/: .bumpversion.cfg  .clang-tidy  .travis.yml  CMakeLists.txt  CODEOWNERS  README.md  appveyor.yml  circle.yml
veil-progpow-miner/cmake/Hunter/: config.cmake
veil-progpow-miner/docs/: API_DOCUMENTATION.md  BUILD.md  POOL_EXAMPLES_ETH.md
veil-progpow-miner/libapicore/: ApiServer.cpp  CMakeLists.txt
veil-progpow-miner/libdevcore/: Common.h  CommonData.cpp  CommonData.h  Exceptions.h  FixedHash.cpp  FixedHash.h  Guards.h  Log.cpp  Log.h  Worker.cpp  Worker.h
veil-progpow-miner/libethash-cl/: CLMiner_kernel.cl
veil-progpow-miner/libethash-cl/kernels/: README.md
veil-progpow-miner/libethash-cpu/: CPUMiner.cpp  CPUMiner.h
veil-progpow-miner/libethash-cuda/: CUDAMiner.cpp  CUDAMiner.h  CUDAMiner_kernel.cu
veil-progpow-miner/libethcore/: EthashAux.cpp  EthashAux.h  Farm.cpp  Farm.h  Miner.cpp  Miner.h
veil-progpow-miner/libhwmon/: wrapnvml.cpp
veil-progpow-miner/libpoolprotocols/: CMakeLists.txt  PoolURI.cpp  PoolURI.h
veil-progpow-miner/libpoolprotocols/stratum/: EthStratumClient.cpp
veil-progpow-miner/libprogpow/: ProgPow.cpp  ProgPow.h
veil-progpow-miner/scripts/: testpools.bash
veil-progpow-miner/veilminer/: CMakeLists.txt  main.cpp  veilminer.rc
